@@ -25,6 +25,7 @@ FreeRapid Downloader 0.86 Update 1
   Fixed : Unable to deselect "Use proxy list" - regression in 0.86
   Fixed : Unable to view dialog for settings of selected files - regression in 0.86
   Fixed : NullpointerException fix for PasswordAuthentication
+  Fixed : Ugly Pause button on Mac version
   Fixed : Rare case - couldn't detect plugins on start - regression in 0.86
 
 30th October 2011 - FreeRapid Downloader 0.86
